refactor: Apply review changes