@@ -1,9 +1,8 @@
 package org.opentripplanner.transit.raptor.rangeraptor.multicriteria;
 
 
-import static java.util.Collections.emptyList;
-
 import java.util.BitSet;
+import java.util.List;
 import org.opentripplanner.transit.raptor.api.transit.IntIterator;
 import org.opentripplanner.transit.raptor.api.transit.RaptorTripSchedule;
 import org.opentripplanner.transit.raptor.rangeraptor.debug.DebugHandlerFactory;
@@ -21,8 +20,8 @@ import org.opentripplanner.transit.raptor.util.BitSetIterator;
  *
  * @param <T> The TripSchedule type defined by the user of the raptor API.
  */
-public final class Stops<T extends RaptorTripSchedule> {
-    private final StopArrivalParetoSet<T>[] stops;
+public final class StopArrivals<T extends RaptorTripSchedule> {
+    private final StopArrivalParetoSet<T>[] arrivals;
     private final BitSet touchedStops;
     private final DebugHandlerFactory<T> debugHandlerFactory;
     private final DebugStopArrivalsStatistics debugStats;
@@ -30,14 +29,14 @@ public final class Stops<T extends RaptorTripSchedule> {
     /**
      * Set the time at a transit index iff it is optimal. This sets both the best time and the transfer time
      */
-    public Stops(
+    public StopArrivals(
             int nStops,
             EgressPaths egressPaths,
             DestinationArrivalPaths<T> paths,
             DebugHandlerFactory<T> debugHandlerFactory
     ) {
         //noinspection unchecked
-        this.stops = (StopArrivalParetoSet<T>[]) new StopArrivalParetoSet[nStops];
+        this.arrivals = (StopArrivalParetoSet<T>[]) new StopArrivalParetoSet[nStops];
         this.touchedStops = new BitSet(nStops);
         this.debugHandlerFactory = debugHandlerFactory;
         this.debugStats = new DebugStopArrivalsStatistics(debugHandlerFactory.debugLogger());
@@ -61,16 +60,14 @@ public final class Stops<T extends RaptorTripSchedule> {
     }
 
     void debugStateInfo() {
-        debugStats.debugStatInfo(stops);
+        debugStats.debugStatInfo(arrivals);
     }
 
     /** List all transits arrived this round. */
     Iterable<AbstractStopArrival<T>> listArrivalsAfterMarker(final int stop) {
-        StopArrivalParetoSet<T> it = stops[stop];
+        StopArrivalParetoSet<T> it = arrivals[stop];
         if(it==null) {
-            // Uses Collections.emptyList() witch is slightly
-            // more efficient than List.of()
-            return emptyList();
+            return List.of();
         }
         return it.elementsAfterMarker();
     }
@@ -78,7 +75,7 @@ public final class Stops<T extends RaptorTripSchedule> {
     void clearTouchedStopsAndSetStopMarkers() {
         IntIterator it = stopsTouchedIterator();
         while (it.hasNext()) {
-            stops[it.next()].markAtEndOfSet();
+            arrivals[it.next()].markAtEndOfSet();
         }
         touchedStops.clear();
     }
@@ -87,10 +84,10 @@ public final class Stops<T extends RaptorTripSchedule> {
     /* private methods */
 
     private StopArrivalParetoSet<T> findOrCreateSet(final int stop) {
-        if(stops[stop] == null) {
-            stops[stop] = StopArrivalParetoSet.createStopArrivalSet(stop, debugHandlerFactory);
+        if(arrivals[stop] == null) {
+            arrivals[stop] = StopArrivalParetoSet.createStopArrivalSet(stop, debugHandlerFactory);
         }
-        return stops[stop];
+        return arrivals[stop];
     }
 
     /**
@@ -103,7 +100,7 @@ public final class Stops<T extends RaptorTripSchedule> {
     ) {
         egressPaths.byStop().forEachEntry((stop, list) -> {
             // The factory is creating the actual "glue"
-            this.stops[stop] = StopArrivalParetoSet.createEgressStopArrivalSet(
+            this.arrivals[stop] = StopArrivalParetoSet.createEgressStopArrivalSet(
                     stop, list, paths, debugHandlerFactory
             );
             return true;
